# MusicStore

./: CMakeLists.txt  CMakeListsQt5.txt  currentAccount.cpp  currentAccount.h  database.cpp  database.h  logWindow.cpp  logWindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  products.h  refillBalanceWindow.cpp  refillBalanceWindow.h  regWindow.cpp  regWindow.h
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
debug/.qt/: QtDeploySupport.cmake
debug/Rent_autogen/: mocs_compilation.cpp
debug/Rent_autogen/EWIEGA46WW/: moc_logWindow.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_regWindow.cpp.d
debug/Rent_autogen/include/: ui_mainwindow.h
release/: CMakeCache.txt  Makefile  cmake_install.cmake
release/.qt/: QtDeploySupport.cmake
release/Rent_autogen/: moc_predefs.h
release/Rent_autogen/EWIEGA46WW/: moc_logWindow.cpp  moc_logWindow.cpp.d  moc_mainwindow.cpp.d  moc_regWindow.cpp  moc_regWindow.cpp.d
release/data/accounts/: 123.txt  123123.txt  213.txt  a.txt  as.txt  asa.txt  asd.txt  asd2.txt  asdf.txt  asdz.txt  assafd.txt  bbb.txt  dom.txt  doms.txt  domss.txt  jjj.txt  love.txt  user.txt  users.txt
